--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "my-app",
-    "slug": "my-app",
+    "name": "faifo-app",
+    "slug": "my-faifo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "faifo",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
