--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
+    "types/expo-env.d.ts",
+    "types/global.d.ts",
+    "nativewind-env.d.ts",
     "expo-env.d.ts"
   ]
 }
