--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,8 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    ".expo/types/**/*.ts",
     "types/expo-env.d.ts",
     "types/global.d.ts",
-    "nativewind-env.d.ts",
-    "expo-env.d.ts"
+    "nativewind-env.d.ts"
   ]
 }
