--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "expo": "~53.0.8",
     "expo-blur": "~14.1.4",
     "expo-camera": "~16.1.6",
