--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
-    "expo": "~53.0.8",
-    "expo-blur": "~14.1.4",
-    "expo-camera": "~16.1.6",
+    "expo": "53.0.10",
+    "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.7",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.7",
+    "expo-image": "~2.2.0",
     "expo-image-manipulator": "^13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.6",
-    "expo-splash-screen": "~0.30.8",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
     "i18next": "^25.2.0",
     "i18next-browser-languagedetector": "^8.1.0",
@@ -43,7 +43,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-i18next": "^15.5.2",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
     "react-native-calendars": "^1.1312.0",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.24.0",
@@ -53,7 +53,7 @@
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-swiper-flatlist": "^3.2.5",
     "react-native-web": "~0.20.0",
